add delete to temperature CRUD(WIP)
