# docs/openapi.yaml
@@ -79,7 +79,7 @@ paths:
           - in: path 
             name: id
             schema:
-              type: string
+              type: string  
             required: true
         requestBody:
           description: temperature object
@@ -112,6 +112,50 @@ paths:
                   location: campoUpdate
                   date: 989796
                   temperature: 55
+      delete:
+        summary: Delete temperature
+        description: Delete temperature by ID
+        operationId: deleteTemperature
+        security:
+          - basicAuth: []
+        parameters:
+          - in: path 
+            name: id
+            schema:
+              type: string  
+            required: true
+        requestBody:
+          description: temperature object
+          required: true
+          content:
+            application/json:
+              schema:
+                properties:
+                  id:
+                    type: integer
+                  location:
+                    type: string
+                  date:                    
+                    type: integer
+                  temperature:
+                    type: integer
+              example:
+                  location: '123'
+                  date: 124124
+                  temperature: 12312
+        responses:
+          '200':
+            description: Temperature deleted.
+            content:
+              application/json:
+                schema:
+                  type: object
+                  $ref: '#/components/schemas/temperature'
+                example:
+                  location: fieldTodelete
+                  date: 747578
+                  temperature: 80
+  
 
 
 components:
